Exer. 3, finalização prototipo e ativ. prat. 3 css

--- a/Projeto/pages/adicionais/adicionais.html
+++ b/Projeto/pages/adicionais/adicionais.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="./cadastro.css">
+    <link rel="stylesheet" href="adicionais.css">
 </head>
 
 <body>
@@ -48,9 +48,6 @@
                     <a class="nav-link" href="../bebidas/bebidas.html">Bebidas</a>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="../finalizar/finalizar.html">Sacola</a>
-                </li>
 
                 <li class="nav-item ">
                     <a class="nav-link" href="../perfil/perfil.html">Perfil<span class="sr-only">(current)</span></a>
@@ -58,7 +55,9 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
 
-                <a  href="../home/home.html" class="btn btn-outline-success my-2 my-sm-0" type="submit">Sair</a>
+                <a href="../finalizar/finalizar.html" class="btn btn-danger my-2 mr-2 my-sm-0" type="submit">R$
+                    24,00</a>
+                <a href="../home/home.html" class="btn btn-outline-success my-2 my-sm-0" type="submit">Sair</a>
             </form>
         </div>
     </nav>
@@ -66,25 +65,27 @@
     <!-- -------------------------------------------------------------------------------------------------- -->
 
 
-    <div class="container w-50 border border-dark rounded shadow bg-white rounded"
+    <div class="container w-75 border border-dark rounded shadow bg-white rounded"
         style=" padding: 20px; margin-top: 100px;   ">
 
+        <div class="title">
 
+            <span>Inserir Adicionais</span>
 
-        <div class="item">
+        </div>
 
-            <div class="descricao">
+        <div class="adicionais">
+            <span>Mussarela</span>
+            <input type="button" id="plus" value='-' onclick="process(-1)" />
+            <input id="quant" name="quant" class="text" size="1" type="text" value="1" maxlength="5" />
+            <input type="button" id="minus" value='+' onclick="process(1)">
 
-                <p>Mussarela: </p>
-            
+            <div class="valor">
+                <span>+ R$ 3,00</span>
             </div>
 
-            <div class="quantidade">
-                <label>Quantidade:</label>
-                <input type="button" id="plus" value='-' onclick="process(-1)" />
-                <input id="quant" name="quant" class="text" size="1" type="text" value="1" maxlength="5" />
-                <input type="button" id="minus" value='+' onclick="process(1)">
-            </div>
+            <div class="dropdown-divider"></div>
+
         </div>
 
 
@@ -94,8 +95,9 @@
 
 
 
-        <input type="submit" class="btn btn-primary" value="Finalizar pedido">
-        <input type="reset" class="btn btn-danger" value="Limpar">
+
+        <a href="../finalizar/finalizar.html" type="submit" class="btn btn-outline-success">Finalizar pedido</a>
+        <input type="reset" class="btn btn-outline-danger" value="Limpar">
 
 
 
