--- a/Projeto/pages/cadastro/cadastro.html
+++ b/Projeto/pages/cadastro/cadastro.html
@@ -39,7 +39,7 @@
                         <a class="dropdown-item" href="../cardapio/cardapio.html">Pizza</a>
                         <a class="dropdown-item" href="../cardapio/cardapio.html">Hamburguer</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Montar meu lanche</a>
+                        <a class="dropdown-item" href="../montagem/montagem.html">Montar meu lanche</a>
                     </div>
                 </li>
 
@@ -51,9 +51,6 @@
                     <a class="nav-link" href="../bebidas/bebidas.html">Bebidas</a>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="../finalizar/finalizar.html">Sacola</a>
-                </li>
 
                 <li class="nav-item ">
                     <a class="nav-link" href="../perfil/perfil.html">Perfil<span class="sr-only">(current)</span></a>
