--- a/Projeto/pages/perfil/perfil.html
+++ b/Projeto/pages/perfil/perfil.html
@@ -49,9 +49,6 @@
                     <a class="nav-link" href="#">Bebidas</a>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="../finalizar/finalizar.html">Sacola</a>
-                </li>
 
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Perfil<span class="sr-only">(current)</span></a>
@@ -60,6 +57,8 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
 
+                <a href="../finalizar/finalizar.html" class="btn btn-danger my-2 mr-2 my-sm-0" type="submit">R$
+                    24,00</a>
                 <a href="../home/home.html" class="btn btn-outline-success my-2 my-sm-0" type="submit">Sair</a>
             </form>
         </div>
